--- a/src/App.css
+++ b/src/App.css
@@ -136,6 +136,10 @@ table tr:hover {
   text-align: center;
 }
 
+.filters{
+  display: grid 50%;
+
+}
 
 table tr:hover {
   background-color: #f9f9f9;
