--- a/src/App.css
+++ b/src/App.css
@@ -7,25 +7,23 @@ body {
 }
 
 header {
-  background-color: #f4f4f4;
-  padding: 20px;
+  padding: 10px;
   text-align: left;
-  border-bottom: 1px solid #ddd;
 }
 
 h1 {
+  margin-top: 20px;
   font-size: 24px;
-  margin: 0;
 }
 
-h1.searchHeader {
+h2 {
   margin-bottom: 2%;
 }
 
 main {
   max-width: 1200px;
-  margin: 20px auto;
-  padding: 20px;
+  margin: 10px auto;
+  padding: 10px;
 }
 
 label {
